[tool.poetry]
name = "multicall-thread-safe"
version = "0.6.0"
description = "aggregate results from multiple ethereum contract calls, tweak to make project thread safe on docker"
authors = ["cb"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = "^5.27"
eth_retry = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0"
black = "^22.8"
joblib = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
